# sevo

./: .dockerignore  .gitignore  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
design/: SPEC.md  api_surface.json  brain_services.json  brain_state_schema.json  curriculum_ingestion_contract.json  docker_compose_blueprint.json  evaluation_protocol.json  events_topics.json  learning_lifecycle.json  manifest.json  memory_model.json  metrics_intelligence.json  sources.json
docs/: CP_PROTOCOL.md  DEVELOPMENTAL_CURVE.md  DEVELOPMENTAL_EVIDENCE.md  LEXICON.md
experiments/: generate_report.py  run_cp_ce1_math.py  run_cp_grade.py  run_emma_live.py  run_fr_conjugation.py  run_fr_cp_ce1.py
reports/: CP_GRADE_REPORT.md  DEVELOPMENTAL_CURVE.md  DEVELOPMENTAL_REPORT.md  EXPERIMENT_REPORT.md  EXPERIMENT_REPORT_CONJUGATION.md  EXPERIMENT_REPORT_FR.md  emma_live_run.json  last_run.json  last_run_conjugation.json  last_run_cp_grade.json  last_run_fr.json
scripts/: demo_cp.py  developmental.py  developmental_curve.py  developmental_evidence.py  smoke_test.sh
tests/: test_api.py  test_api_surface.py  test_bank_params.py  test_ce1_protocol.py  test_ce2_protocol.py  test_conjugation.py  test_cp_numeration.py  test_cp_protocol_freeze.py  test_curve_numeric_fixture.py  test_developmental.py  test_developmental_curve.py  test_developmental_evidence.py  test_emma_session.py  test_french.py  test_integration.py  test_integrity.py  test_invariants.py  test_learning.py  test_lecture.py  test_lexicon.py  test_live_exercises.py  test_migrations.py  test_runtime.py  (+6 more)
(+88 files in other folders)
