[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sevo"
version = "0.5.0"
description = "Sèvo — a persistent artificial brain exposed by API, that learns a school curriculum and is measured before/after (Intelligence_delta)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Talki" }]
keywords = ["cognitive-architecture", "complementary-learning-systems", "education", "metacognition"]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2", "httpx>=0.27"]
dev = ["pytest>=8", "fastapi>=0.110", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
